# MantraxVKRender

./: .gitignore  MantraxVKRender.sln  README.md
MantraxCSLib/: Class1.cs
MantraxECS/include/: AssimpLoader.h  EngineLoaderDLL.h  EntityObject.h  FPSCamera.h  IService.h  InputSystem.h  LoggerService.h  LuaScript.h  MaterialManager.h  ModelManager.h  Scene.h  SceneManager.h  SceneRenderer.h  ServiceLocator.h  SkyBox.h  TextureLoader.h  ecs.h
MantraxECS/libs/: lua-5.4.4.lib
MantraxECS/src/: InputSystem.cpp  LuaScript.cpp  ModelManager.cpp  Scene.cpp  SceneManager.cpp  SceneRenderer.cpp  ServiceLocator.cpp  SkyBox.cpp  stb_image_impl.cpp
MantraxEditor/: CMakeLists.txt  MantraxApp.lib
MantraxEditor/includes/: Camera.h  Components.h  EngineLoader.h  FPSCamera.h  ImGuiManager.h  LoggerService.h  LuaEditor.h  MinecraftChunk.h  Selection.h  ServiceLocator.h  UIBehaviour.h  UIRender.h
MantraxEditor/includes/ui/: Hierarchy.h  Inspector.h  MenuBar.h  SceneView.h
MantraxEditor/src/: EngineLoader.cpp  Selection.cpp  main.cpp
MantraxEditor/src/ui/: Hierarchy.cpp  Inspector.cpp  MenuBar.cpp  SceneView.cpp
MantraxPhysics/include/: UBody.h  UCollisionBehaviour.h  UMath.h  UPhysics.h
MantraxPhysics/src/: UBody.cpp  UCollisionBehaviour.cpp  UPhysics.cpp
MantraxRender/include/: MainWinPlug.h  MantraxGFX_API.h  MantraxGFX_Timer.h
MantraxRender/include - copia/: MantraxGFX_API.h  MantraxGFX_Geometry.h  MantraxGFX_Lighting.h
MantraxRender/src/: MainWinPlug.cpp  MantraxGFX_API.cpp  MantraxGFX_Timer.cpp
MantraxWrapper/: CMakeLists.txt
app/: CMakeLists.txt  Camera.h  ImGuiManager.h  MinecraftChunk.h  main.cpp
editor/: CMakeLists.txt
editor/includes/: ImGuiManager.h  MinecraftChunk.h
editor/src/: main.cpp
render/include/: MainWinPlug.h  MantraxGFX_API.h
render/include - copia/: MantraxGFX_Input.h  MantraxGFX_RenderTarget.h  MantraxGFX_Window.h
